--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,38 +7,46 @@
             font-size: 8px;
             line-height: 1.42857;
             background: rgb(217, 26, 35);
-            margin-right: 5px;
+            margin-right: 15px;
         }
 
 
-#chat-broadcast{
+/* #broadcast{
     max-width: 800px;
     margin: auto;
     border: 1px solid #ddd;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
     border-radius: 2px;
-}
+} */
 
-#chat-window{
+/* .private{
+    max-width: 800px;
+    margin: auto;
+    border: 1px solid #ddd;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    border-radius: 2px;
+} */
+
+.chat-window{
     height: 320px;
     overflow: auto;
     background: #f9f9f9;
 }
 
-#chat-output p{
+.chat-output p{
     padding: 14px 0px;
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     color: #555;
 }
 
-#typing p{
+.typing p{
     color: #aaa;
     padding: 14px 0px;
     margin: 0 20px;
 }
 
-#notification p{
+.notification p{
     color: black;
     padding: 14px 0px;
     margin: 0 20px;
@@ -51,7 +59,7 @@
     padding: 10px 20px;
 } */
 
-#chat-message{
+.chat-message{
     padding: 15px 20px;
     box-sizing: border-box;
     background: #eee;
@@ -64,7 +72,7 @@
     outline: none;
 }
 
-#chat-send{
+.chat-send{
     background: rgba(0,0,0,0.8);
     color: #fff;
     font-size: 18px;
@@ -73,4 +81,45 @@
     width: 100%;
     border-radius: 0 0 2px 2px;
     outline: none;
+}
+
+#sidebar-wrapper {
+  min-height: 100vh;
+  margin-left: -15rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+  padding: 0.875rem 1.25rem;
+  font-size: 1.2rem;
+}
+
+#sidebar-wrapper .list-group {
+  width: 15rem;
+}
+
+#page-content-wrapper {
+  min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  margin-left: 0;
+}
+
+@media (min-width: 768px) {
+  #sidebar-wrapper {
+    margin-left: 0;
+  }
+
+  #page-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    margin-left: -15rem;
+  }
 }
