--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,7 +65,7 @@
 
 <script>
     //Make Connection between Client and Server
-    const socket = io.connect('http://localhost:3000');
+    const socket = io.connect('https://whatever15.herokuapp.com');
     $('.collapse').on('show.bs.collapse', function () {
         $('.collapse').each(function () {
             $(this).collapse('hide');
