--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,9 +27,9 @@
             class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false"
             aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="container"> <a class="navbar-brand" href="#">Code Girls</a>
+        <div class="container"> <a class="navbar-brand" href="https://codegirls.consulnet.net/" target="_blank">CODEGIRLS</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item <%= locals.login %>">
                         <a class="nav-link" href="/login"> Login </a>
                     </li>
@@ -39,13 +39,8 @@
                     <li class="nav-item <%= locals.logout %>">
                         <a class="nav-link" href="/logout"> Logout </a>
                     </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
                     <li class="nav-item <%= locals.register %>">
                         <a class="nav-link" href="/register"> Register </a>
-                    </li>
-                    <li class="nav-item <%= locals.recover %>">
-                        <a class="nav-link" href="/recover"> Recover </a>
                     </li>
                 </ul>
             </div>
