--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,14 +15,13 @@
                 <div class="form-group">
                     <label class="form-control-label" for="username">Username:</label>
                     <input class="form-control" id="username" type="text" name="username"
-                     autocomplete="off" value="" required style="text-transform: capitalize"></div>
+                     autocomplete="off" value="" required></div>
                 <div class="form-group">
                     <label class="form-control-label" for="password">Password:</label>
                     <input class="form-control" id="password" type="password" name="password"
                      autocomplete="off" required>
                 </div>
                 <p> Not registered? <a href="/register"> Register Here </a> </p>
-                <p> <a href="/recover">Forgot your password?</a></p>
                 <button class="m-1 btn btn-primary" type="submit">Log In</button><a class="m-1 btn btn-secondary"
                     href="/" role="button">Reset</a>
             </form>
