--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,16 +12,12 @@
             <form method="POST" action="/register" autocomplete="off" id="regForm">
               <div class="form-group"><label class="form-control-label" for="username">Username:</label>
                   <input class="form-control" id="username" type="text" name="username"
-                      autocomplete="off" value="" required style="text-transform: capitalize"></div>
+                      autocomplete="off" value="" required></div>
               <div class="form-group"><label class="form-control-label" for="password">Password:</label><input
                       class="form-control" id="password" type="password" name="password" autocomplete="off" required>
               </div>
-              <div class="form-group"><label class="form-control-label" for="username">Secret Question:</label>
-                <input class="form-control" id="secretQues" type="text" name="secretQues"
-                    autocomplete="off" value="" required style="text-transform: capitalize"></div>
-                    <div class="form-group"><label class="form-control-label" for="username"> Answer: </label>
-                      <input class="form-control" id="secretAns" type="text" name="secretAns"
-                          autocomplete="off" value="" required style="text-transform: capitalize"></div><button class="m-1 btn btn-primary" type="submit">Sign Up</button><a
+              <p> Already registered? <a href="/login"> Login Here </a> </p>
+              <button class="m-1 btn btn-primary" type="submit">Sign Up</button><a
                   class="m-1 btn btn-secondary" href="/register" role="button">Reset</a>
           </form>
       </div>
