--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <div class="card" style="width: 60%; margin: 0 auto; margin-top: 20px; ">
         <div class="card-header">Login</div>
         <div class="card-block">
-            <form method="POST" action="/" autocomplete="off" id="loginForm">
+            <form method="POST" action="/login" autocomplete="off" id="loginForm">
                 <input type="hidden" name="userId" value="">
                 <div class="form-group">
                     <label class="form-control-label" for="username">Username:</label>
